--- a/userAssets/Robot_Rebuilt/config.json
+++ b/userAssets/Robot_Rebuilt/config.json
@@ -1,8 +1,22 @@
 {
-    "name": "Indiana Jones: Raiders of the Limelight",
-    "rotations": [],
-    "position": [],
-    "cameras": [
+  "name": "2026 IndieBot",
+  "isFTC": false,
+  "position": [
+    0.0,
+    0.0,
+    0.045
+  ],
+  "rotations": [
+    {
+      "axis": "x",
+      "degrees": 90
+    },
+    {
+      "axis": "z",
+      "degrees": 90
+    }
+  ],
+  "cameras": [
         {
             "name": "FrontCam",
             "rotations": [
@@ -20,9 +34,9 @@
                 }
             ],
             "position": [
-                0,
-                0,
-                0
+                0.3,
+                0.0,
+                0.15
             ],
             "resolution": [
                 960,
@@ -43,13 +57,13 @@
                 },
                 {
                     "axis": "z",
-                    "degrees": 0
+                    "degrees": 180
                 }
             ],
             "position": [
-                0,
-                0,
-                0
+                -0.3,
+                0.0,
+                0.15
             ],
             "resolution": [
                 960,
@@ -57,5 +71,45 @@
             ],
             "fov": 70
         }
-    ]
+  ],
+  "components": [
+    {
+      "zeroedRotations": [
+        {
+          "axis": "x",
+          "degrees": 90
+        },
+        {
+          "axis": "z",
+          "degrees": 90
+        }
+      ],
+      "zeroedPosition": [
+        0.197,
+        0.0,
+        -0.395
+      ]
+    },
+    {
+      "zeroedRotations": [
+        {
+          "axis": "x",
+          "degrees": 90
+        },
+        {
+          "axis": "z",
+          "degrees": -90
+        },
+        {
+          "axis": "y",
+          "degrees": 20
+        }
+      ],
+      "zeroedPosition": [
+        -0.255,
+        0.0,
+        -0.427
+      ]
+    }
+  ]
 }
